unpackaged/main/default/objects/Activity/fields/Sonia_s_Field__c.field-meta.xml
<CustomField>
    <fullName>Sonia_s_Field__c</fullName>
    <label>Sonia&#39;s Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>